--- a/css/main.css
+++ b/css/main.css
@@ -1,32 +1,69 @@
-
 body {
-    background: url('../img/alley.gif');
+    font-family: "Public Sans", sans-serif;
+    background: white;
     text-align: center;
-    color: #ffffff;
-    cursor: url('../img/cursor.png'), pointer !important;
-    font-family: "Comic Neue", cursive;
-    font-weight: 400;
-    font-style: normal;
-  
+    color: black;
 }
 
-.hero {
-    background: url('../img/bg.png') no-repeat center center;
-    background-size: cover;
-    height: 100vh;
-    width: 100%;
-    overflow:hidden;
-    margin-top: -60px;
+.grey-bg{
+    background: rgb(245, 248, 255);
+    padding: 200px;
+    padding: 200px;
 }
 
-a {
-    cursor: url('../img/cursor_hover.png'), pointer !important;
+.hero-section {
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+     height: 100vh;
+    /*width: 100%; */
+    overflow: hidden;
 }
 
-h1 {
-    font-size: 3em;
+.hero-text-main {
+    margin-top:100px;
+    margin-left: 130px;
+    font-weight: 700;
     color: white;
+    font-size: 2.5em;
 }
+
+.hero-subtext {
+    margin-left: 130px;
+    font-weight: 700;
+    color: white;
+    font-size: .9em;
+} 
+
+.btn-ca {
+    margin-left: 140px;
+    height: 56px;
+    border-radius: 56px;
+    background: rgb(0, 82, 255);
+    color:white;
+    border: 0px;
+    font-size: .7em;
+}
+
+.btn-ca:hover {
+    background: rgb(2, 66, 203);
+    opacity: 0.92;
+}
+
+.fancy {
+    position: relative;
+    white-space: nowrap;
+    &:after {
+      --deco-height: 0.3125em;
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: calc(var(--deco-height) * -0.625);
+      height: var(--deco-height);
+      background-image: url("data:image/svg+xml,%3Csvg width='100' height='64' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23a)'%3E%3Cpath d='M-17 30.5C-1 22 72-4 54 13 37.9 28.2-2.5 57.5 16 55.5s72-29 104-40' stroke='%230052ff' stroke-width='10'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='a'%3E%3Cpath fill='%23fff' d='M0 0h100v64H0z'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+      background-size: auto 100%;
+      background-repeat: round;
+      background-position: 0em;
+    }}
 
 #eye {
     position: absolute;
@@ -52,14 +89,13 @@ h1 {
     transition: 0;
 }
 
-
 #eye2 {
     position: absolute;
-    top: 295px;
-    left: 1075px;
+    top: 29%;
+    left: 70%;
     transform: translate(-60%, -60%);
-    height: 70px;
-    width: 70px;
+    height: 50px;
+    width: 50px;
     background: transparent;
     border-radius: 50%;
     overflow: hidden;
@@ -67,8 +103,8 @@ h1 {
 
 #eyeBall2 {
     position: absolute;
-    top: 295px;
-    left: 1075px;
+    top: 29%;
+    left: 70%;
     height: 95px;
     width: 95px;
     transform: translate(-50%, -50%);
@@ -77,7 +113,31 @@ h1 {
     transition: 0;
 }
 
+@media screen and (min-width: 1300px) {
 
+    #eye2 {
+        top: 29%;
+        left: 69%;
+    }
+
+    #eyeBall2 {
+        top: 29%;
+        left: 69%;
+    }
+}
+
+@media screen and (min-width: 1400px) {
+
+    #eye2 {
+        top: 29%;
+        left: 67%;
+    }
+
+    #eyeBall2 {
+        top: 29%;
+        left: 67%;
+    }
+}
 
 .im {
     position: relative;
@@ -87,23 +147,52 @@ h1 {
 
 
 
+
+
 .section {
     margin-top: 300px;
-    overflow:hidden;
+    overflow: hidden;
 }
 
-.marquee {
-    font-family: 'Inter' !important;
-    font-size: 50px;
-    color: #083adb;
-    background-color: aliceblue;
+.muted {
+    color: rgb(91, 97, 110);
 }
 
-.mb-0  {
+.mb-0 {
     margin-right: 15px;
 }
 
 .youtube-video {
     aspect-ratio: 16 / 9;
+    width: 90%;
+}
+
+.logo {
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    color: rgb(0, 82, 255);
+}
+
+
+/* chart stuff */
+#dexscreener-embed {
+    position: relative;
     width: 100%;
-  }
+    padding-bottom: 125%;
+}
+
+@media(min-width:1400px) {
+    #dexscreener-embed {
+        padding-bottom: 65%;
+    }
+}
+
+#dexscreener-embed iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border: 0;
+}
