--- a/css/main.css
+++ b/css/main.css
@@ -13,22 +13,25 @@ body {
 
 .hero-section {
     padding-top: 10%;
-    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+    background: #2d4bad;
+    background: -webkit-linear-gradient(to left, #8fb5fb, #4e6ac8);
     height: 100vh;
     overflow: hidden;
+    z-index: -1;
 }
 
 .hero-text-main {
-    padding: 4%;
+    padding: 7%;
+    padding-top: 10%;
+    padding-left: 15%;
     font-weight: 700;
     color: white;
     font-size: 2.5em;
 }
 
 .hero-subtext {
-    margin-left: 10%;
-    padding: 3%;
-    white-space: nowrap;
+    padding: 7%;
+    padding-left: 15%;
     font-weight: 700;
     color: white;
 }
@@ -48,29 +51,10 @@ body {
     opacity: 0.92;
 }
 
-.fancy {
-    position: relative;
-    white-space: nowrap;
-
-    &:after {
-        --deco-height: 0.3125em;
-        content: "";
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: calc(var(--deco-height) * -0.625);
-        height: var(--deco-height);
-        background-image: url("data:image/svg+xml,%3Csvg width='100' height='64' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23a)'%3E%3Cpath d='M-17 30.5C-1 22 72-4 54 13 37.9 28.2-2.5 57.5 16 55.5s72-29 104-40' stroke='%230052ff' stroke-width='10'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='a'%3E%3Cpath fill='%23fff' d='M0 0h100v64H0z'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
-        background-size: auto 100%;
-        background-repeat: round;
-        background-position: 0em;
-    }
-}
-
 #eye {
     position: absolute;
-    top: 22%;
-    left: 47%;
+    top: 16%;
+    left: 46%;
     transform: translate(-60%, -60%);
     height: 70px;
     width: 70px;
@@ -81,8 +65,8 @@ body {
 
 #eyeBall {
     position: absolute;
-    top: 22%;
-    left: 47%;
+    top: 16%;
+    left: 46%;
     height: 95px;
     width: 95px;
     transform: translate(-50%, -50%);
@@ -93,8 +77,8 @@ body {
 
 #eye2 {
     position: absolute;
-    top: 29%;
-    left: 68%;
+    top: 23%;
+    left: 71%;
     transform: translate(-60%, -60%);
     height: 50px;
     width: 50px;
@@ -105,8 +89,8 @@ body {
 
 #eyeBall2 {
     position: absolute;
-    top: 29%;
-    left: 68%;
+    top: 23%;
+    left: 71%;
     height: 95px;
     width: 95px;
     transform: translate(-50%, -50%);
@@ -123,7 +107,6 @@ body {
     #eye {
         height: 30px;
         width: 30px;
-
     }
 
     #eyeBall {
@@ -134,13 +117,15 @@ body {
     #eye2 {
         height: 30px;
         width: 30px;
-
-
     }
 
     #eyeBall2 {
         height: 25px;
         width: 25px;
+    }
+
+    .hero-subtext {
+        font-size: 0.7em;
     }
 }
 
@@ -162,16 +147,13 @@ body {
     #eye2 {
         height: 55px;
         width: 55px;
-        top: 29%;
-        left: 80%;
+
 
     }
 
     #eyeBall2 {
         top: 29%;
         left: 95%;
-        height: 20px;
-        width: 20px;
     }
 
     .hero-text-main {
@@ -183,8 +165,6 @@ body {
 @media screen and (max-width: 992px) {
 
     #eye2 {
-        top: 19%;
-        left: 95%;
         height: 80px;
         width: 80px;
     }
@@ -192,12 +172,10 @@ body {
     #eyeBall2 {
         height: 70px;
         width: 70px;
-        top: 19%;
-        left: 95%;
     }
 }
 
-@media screen and (max-width: 1300px) {
+/* @media screen and (max-width: 1300px) {
 
     #eye2 {
         top: 29%;
@@ -208,7 +186,7 @@ body {
         top: 29%;
         left: 72%;
     }
-}
+} */
 
 
 .im {
@@ -220,6 +198,7 @@ body {
 .section {
     margin-top: 300px;
     overflow: hidden;
+    padding: auto;
 }
 
 .muted {
@@ -239,7 +218,7 @@ body {
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
-    color: rgb(0, 82, 255);
+    color: white;
 }
 
 
