--- a/css/main.css
+++ b/css/main.css
@@ -229,3 +229,27 @@ body {
     left: 0;
     border: 0;
 }
+
+.rocket {
+    transform: translatey(0px);
+	animation: float 2.2s ease-in-out infinite;
+    max-width: 500px;
+    margin-top:50px;
+    overflow:hidden;
+  }
+
+
+@keyframes float {
+	0% {
+		
+		transform: translatey(0px);
+	}
+	50% {
+		
+		transform: translatey(-15px);
+	}
+	100% {
+		
+		transform: translatey(0px);
+	}
+}
