--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,11 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+
+    #hero {
+        content:url("../img/hero_with_eyes.png");  
+    }
+
     .hero-section {
         padding-top: 50%;
     }
@@ -252,4 +257,11 @@ body {
 		
 		transform: translatey(0px);
 	}
+}
+
+
+.meme {
+    /* float: left; */
+    /* background-size: cover; */
+    max-width: 600px;
 }
